# algorytmy_pwr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  sortowanie_zapis.cpp  test_drzewa.cpp  testy  testy_czasowe_filmow.cpp  testy_czasowe_int.cpp  testy_kubek.cpp  unit_testy  unit_testy.cpp
sources/: dane_zadaniowe.h  drzewo.h  sortowania.h  sortowanie_b.h
